--- a/app/home.html
+++ b/app/home.html
@@ -13,15 +13,48 @@
 
 
 <main>
-    <section class="hero-home">
+    <section class="hero-home js-slider">
         <div class="home-hero-slider swiper-container">
             <div class="swiper-wrapper">
                 <div class="home-hero-slide swiper-slide">
                     <div class="img">
-                        <img class="lazyload" data-src="./img/home-banner.jpg" alt="">
+
+                        <picture>
+                            <source media="(max-width:650px)" srcset="./img/home-banner-mob.jpg">
+                            <img src="./img/home-banner.jpg" alt="Flowers">
+                        </picture>
                     </div>
                     <div class="container">
                         <div class="home-hero__text">
+                            <span>Активный отдых и развлечения</span>
+                            <div class="btns">
+                                <a href="#" class="btn btn--white">Подробнее</a>
+                                <div class="play-video white">
+                                    Смотреть видео
+                                </div>
+
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+                <div class="home-hero-slide swiper-slide">
+                    <div class="img">
+                        <picture>
+                            <source media="(max-width:650px)" srcset="./img/home-banner-mob.jpg">
+                            <img src="./img/home-banner.jpg" alt="Flowers">
+                        </picture>
+                    </div>
+                    <div class="container">
+                        <div class="home-hero__text">
+                            <span>Активный отдых и развлечения</span>
+                            <div class="btns">
+                                <a href="#" class="btn btn--white">Подробнее</a>
+                                <div class="play-video white">
+                                    Смотреть видео
+                                </div>
+
+                            </div>
 
                         </div>
                     </div>
@@ -44,6 +77,22 @@
                 </div>
             </div>
 
+        </div>
+    </section>
+    <section class="booking">
+        <div class="container">
+            <div class="booking__container">
+                <div class="text">
+                    <p>Бронирование номеров</p>
+                    <span>Гарантированное заселение</span>
+                </div>
+                <div class="booking-form">
+                    <p></p>
+                    <p></p>
+
+                </div>
+
+            </div>
         </div>
     </section>
 
